--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "test:all": "ember try:each"
   },
   "dependencies": {
-    "ember-cli-babel": "^7.1.2"
+    "ember-cli-babel": "^7.1.2",
+    "ember-cli-yadda": "^0.5.0"
   },
   "devDependencies": {
     "@ember/optional-features": "^0.6.3",
+    "@ember/test-helpers": "^1.1.0",
     "broccoli-asset-rev": "^2.7.0",
     "ember-cli": "~3.6.1",
     "ember-cli-dependency-checker": "^3.0.0",
