--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "ember-cli-babel": "^7.1.2",
+    "ember-get-config": "^0.2.4",
     "ember-inflector": "^3.0.0",
     "ember-require-module": "^0.3.0"
   },
