--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "test:all": "ember try:each"
   },
   "dependencies": {
+    "chai": "^4.2.0",
+    "ember-auto-import": "^1.5.3",
     "ember-cli-babel": "^7.1.2",
     "ember-get-config": "^0.2.4",
     "ember-inflector": "^3.0.0",
@@ -36,6 +38,7 @@
     "ember-cli-htmlbars": "^3.0.0",
     "ember-cli-htmlbars-inline-precompile": "^1.0.3",
     "ember-cli-inject-live-reload": "^1.8.2",
+    "ember-cli-mirage": "^1.1.4",
     "ember-cli-sri": "^2.1.1",
     "ember-cli-template-lint": "^1.0.0-beta.1",
     "ember-cli-uglify": "^2.1.0",
@@ -52,7 +55,8 @@
     "eslint-plugin-ember": "^5.2.0",
     "eslint-plugin-node": "^7.0.1",
     "loader.js": "^4.7.0",
-    "qunit-dom": "^0.8.0"
+    "qunit-dom": "^0.8.0",
+    "sinon": "^7.5.0"
   },
   "engines": {
     "node": "6.* || 8.* || >= 10.*"
