--- a/package.json
+++ b/package.json
@@ -36,7 +36,13 @@
     "babel-eslint": "^10.0.3",
     "broccoli-asset-rev": "^3.0.0",
     "ember-cli": "~3.13.1",
+    "ember-cli-addon-docs": "lolmaus/ember-cli-addon-docs#patch-2",
+    "ember-cli-addon-docs-yuidoc": "^0.2.3",
     "ember-cli-dependency-checker": "^3.1.0",
+    "ember-cli-deploy": "^1.0.2",
+    "ember-cli-deploy-build": "^2.0.0",
+    "ember-cli-deploy-git": "^1.3.4",
+    "ember-cli-deploy-git-ci": "^1.0.1",
     "ember-cli-eslint": "^5.1.0",
     "ember-cli-htmlbars-inline-precompile": "^3.0.0",
     "ember-cli-inject-live-reload": "^2.0.1",
@@ -51,6 +57,7 @@
     "ember-maybe-import-regenerator": "^0.1.6",
     "ember-qunit": "^4.5.1",
     "ember-resolver": "^5.3.0",
+    "ember-root-url": "^0.2.0",
     "ember-source": "^3.14.1",
     "ember-source-channel-url": "^2.0.1",
     "ember-try": "^1.2.1",
