--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ember-cli-yadda-opinionated",
-  "version": "0.12.2",
+  "version": "1.0.0-beta.0",
   "description": "A radical take on Cucumber to solve your test maintenance woes.",
   "keywords": [
     "ember-addon",
