--- a/package.json
+++ b/package.json
@@ -28,14 +28,13 @@
     "test:all": "ember try:each"
   },
   "dependencies": {
-    "chai": "^4.2.0",
+    "chai": "^4.3.6",
     "chai-as-promised": "^7.1.1",
     "ember-auto-import": "^1.5.3",
     "ember-cli-babel": "^7.13.0",
     "ember-cli-htmlbars": "^4.0.5",
     "ember-get-config": "^0.2.4",
     "ember-inflector": "^3.0.1",
-    "ember-require-module": "^0.3.0",
     "is-subset": "^0.1.1"
   },
   "devDependencies": {
@@ -63,6 +62,7 @@
     "ember-export-application-global": "^2.0.1",
     "ember-load-initializers": "^2.1.0",
     "ember-maybe-import-regenerator": "^0.1.6",
+    "ember-power-select": "^5.0.3",
     "ember-qunit": "^4.5.1",
     "ember-resolver": "^6.0.0",
     "ember-root-url": "^0.2.0",
