--- a/package.json
+++ b/package.json
@@ -30,11 +30,10 @@
   "dependencies": {
     "chai": "^4.3.6",
     "chai-as-promised": "^7.1.1",
-    "ember-auto-import": "^1.5.3",
+    "ember-auto-import": "^1.12.2",
     "ember-cli-babel": "^7.13.0",
-    "ember-cli-htmlbars": "^4.0.5",
-    "ember-get-config": "^0.2.4",
-    "ember-inflector": "^3.0.1",
+    "ember-get-config": "^2.1.1",
+    "ember-inflector": "^4.0.2",
     "is-subset": "^0.1.1"
   },
   "devDependencies": {
@@ -42,16 +41,14 @@
     "@ember/test-helpers": "^1.7.1",
     "babel-eslint": "^10.0.3",
     "broccoli-asset-rev": "^3.0.0",
-    "ember-auto-import": "^1.5.2",
     "ember-cli": "~3.14.0",
-    "ember-cli-addon-docs": "lolmaus/ember-cli-addon-docs#patch-2",
-    "ember-cli-addon-docs-yuidoc": "^0.2.3",
     "ember-cli-dependency-checker": "^3.1.0",
     "ember-cli-deploy": "^1.0.2",
     "ember-cli-deploy-build": "^2.0.0",
     "ember-cli-deploy-git": "^1.3.4",
     "ember-cli-deploy-git-ci": "^1.0.1",
     "ember-cli-eslint": "^5.1.0",
+    "ember-cli-htmlbars": "^4.0.5",
     "ember-cli-inject-live-reload": "^2.0.1",
     "ember-cli-mirage": "^1.1.4",
     "ember-cli-sri": "^2.1.1",
@@ -75,7 +72,7 @@
     "qunit-dom": "^0.9.2"
   },
   "engines": {
-    "node": "8.* || >= 10.*"
+    "node": "12.* || >= 14.*"
   },
   "ember-addon": {
     "configPath": "tests/dummy/config",
@@ -83,5 +80,8 @@
     "versionCompatibility": {
       "ember": ">=3.8.0"
     }
+  },
+  "volta": {
+    "node": "12.22.12"
   }
 }
